fix nav bar - center align

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 
 /* -----------GENERAL----------- */
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .bg-color-grey{
     background-color: grey;
 }
@@ -33,20 +37,51 @@ header{
 }
 
 /* NAV */
-nav.main-nav{
+section.main-nav{
     width: 70%;
     height: 3rem;
     background-color: orange;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: space-between;
+    align-items: center; */
 
     margin: .5rem 0 3rem 0;
 }
 
-nav.main-nav ul li{
+section.main-nav>h1{
+    width: 20%;
+    height: 100%;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+div.main-btn{
+    width: 20%;
+    height: 100%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center; 
+}
+
+nav ul li{
     display: inline;
+}
+
+nav{
+    width: 60%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav.main-nav button{
+    width: 120px;
 }
 
 /* Main-Header */
@@ -136,7 +171,7 @@ div.big-link{
 }
 
 div.little-link{
-    width: calc(70% / 3);
+    width: calc(70% / 4);
     height: 100%;
     background-color: rgb(0, 89, 253);
     border: 1px solid black;
